docs: Fix CSS dark mode for table headers (see #4085)

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -110,7 +110,9 @@ a:hover {
   }
 
   table th {
-    background-color: #2a2a2a !important;
+    background-color: #333 !important;
+    color: #f0f0f0 !important;
+    font-weight: bold !important;
   }
 
   table tr:nth-child(even) {
